--- a/www/index.html
+++ b/www/index.html
@@ -29,7 +29,43 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
         <title>Hello World</title>
     </head>
-    <body>
+    <body> <!-- using the standard template supplied by jquery mobile -->
+	<!-- Start of first page -->
+		<div data-role="page" id="foo">
+
+			<div data-role="header">
+				<h1>Foo</h1>
+			</div><!-- /header -->
+
+			<div data-role="content">	
+				<p>I'm first in the source order so I'm shown as the page.</p>		
+				<p>View internal page called <a href="#bar">bar</a></p>	
+			</div><!-- /content -->
+
+			<div data-role="footer">
+				<h4>Page Footer</h4>
+			</div><!-- /footer -->
+		</div><!-- /page -->
+
+
+		<!-- Start of second page -->
+		<div data-role="page" id="bar">
+
+			<div data-role="header">
+				<h1>Bar</h1>
+			</div><!-- /header -->
+
+			<div data-role="content">	
+				<p>I'm the second in the source order so I'm hidden when the page loads. I'm just shown if a link that references my ID is beeing clicked.</p>		
+				<p><a href="#foo">Back to foo</a></p>	
+			</div><!-- /content -->
+
+			<div data-role="footer">
+				<h4>Page Footer</h4>
+			</div><!-- /footer -->
+		</div><!-- /page -->
+		
+	<!-- Original HelloWorld Code note the app.initialize start do I need to use that???
         <div class="app">
             <h1>PhoneGap</h1>
             <div id="deviceready" class="blink">
@@ -42,5 +78,6 @@
         <script type="text/javascript">
             app.initialize();
         </script>
+	-->
     </body>
 </html>
